After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 579232 - gnome-screenshot ignores typed-in save location
gnome-screenshot ignores typed-in save location
Status: RESOLVED FIXED
Product: gnome-utils
Classification: Deprecated
Component: screenshot
2.26.x
Other Linux
: Normal minor
: ---
Assigned To: gnome-utils Maintainers
gnome-utils Maintainers
: 570425 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-04-17 01:04 UTC by Andreas Moog
Modified: 2011-06-13 20:47 UTC
See Also:
GNOME target: ---
GNOME version: 2.25/2.26


Attachments
patch (918 bytes, patch)
2010-10-18 22:16 UTC, Mario Kemper
none Details | Review

Description Andreas Moog 2009-04-17 01:04:42 UTC
To replicate:

 1. Start gnome-screenshot.

 2. Choose a save directory, but type it into the "Location"
    box. Don't choose a folder by clicking to it (that doesn't seem to
    trigger this bug).

 3. Notice that the chosen save directory is shown in the "Save in
    folder" area, then press "Save".

 4. The new file is saved into the home directory (or whatever
    directory gnome-screenshot has last considered valid), not the
    chosen directory.
Comment 1 Mario Kemper 2010-10-17 17:05:46 UTC
This is because gtk_file_chooser_get_current_folder_uri is used instead of gtk_file_chooser_get_uri:
http://git.gnome.org/browse/gnome-utils/tree/gnome-screenshot/screenshot-dialog.c
Comment 2 Mario Kemper 2010-10-18 22:16:13 UTC
Created attachment 172659 [details] [review]
patch

Here is a simple patch fixing this problem.
Comment 3 Cosimo Cecchi 2011-06-13 20:28:30 UTC
Thanks, I applied the patch to git master.
Comment 4 Cosimo Cecchi 2011-06-13 20:47:19 UTC
*** Bug 570425 has been marked as a duplicate of this bug. ***