screenshot: don't ignore typed-in location

https://bugzilla.gnome.org/show_bug.cgi?id=579232